# my_blas

./: .gitignore  Makefile  README.md  create.sh  daxpy-perf.c  daxpy-perf.sh  daxpy.c  ddot-perf.sh  ddot.c  ddot.h  ddotc-perf.c  ddotc-perf.sh  dgemm-perf.c  dgemm-perf.sh  dgemm.c  dgemm.h  dgemv-perf.c  dgemv-perf.sh  dgemv.c  dger-perf.sh  dgetrf-perf.c  dgetrf.c  dgetrf.h  draw-curve.py  dscal-perf.sh  dscal.h  plot-curves.R  test-result.py  util.c  util.h
include/: algonum.h  daxpy.h  definition.h  dgemm.h  dgemv.h  dger.h  dgesv.h  dgetrf.h  dgetrs.h  dlaswp.c  dlaswp.h  dtrsm.h  misc.h  util.h
script/: load_modules.sh
src/: dgemm-tile.c  dgemm.c  dgemm_omp.c  dger.c  dgesv.c  dgetrf-omp.c  dgetrf-tile.c  dgetrf.c  dgetrs.c  driver.c  dscal.c  dtrsm-omp.c  dtrsm.c  misc.c  pdgetrf.c  util.c
tp4/: .CMakeLists.txt.swp  CMakeLists.txt  algonum-env.sh
tp4/algonum/: CMakeLists.txt  codelet_dlacpy.c  codelet_dplrnt.c  core_dplrnt.c  perf.c  starpu.c  starpu_dlacpy.c  starpu_dplrnt.c  test-gemm.c  test-getrf.c  tile.c
tp4/algonum/include/: algonum.h  algonum_int.h  codelets.h  flops.h
tp4/algonum/install/include/: algonum.h  perf.h
tp4/myblas/: CMakeLists.txt  codelet_dgemm.c  codelet_dgetrf.c  codelet_dtrsm.c  mydgemmold.c  mydgetrf.c  mygemm.c  mygetrf.c  starpu_dgemm.c  starpu_dgetrf.c
tp4/plot/: blocksize-seq.conf  blocksize-starpu.conf
tp4/testings/: CMakeLists.txt  check_dgemm.c  check_dgetrf.c  perf_dgemm.c  perf_dgetrf.c
tst/: daxpy-perf.c  ddot-perf.c  dgemm-perf.c  dgemm-test  dgemm-test.c  dgemm-tiled-perf.c  dgemm_block-perf.c  dgemm_scala_forte-perf.c  dgemv-perf.c  dger-perf.c  dgesv-perf.c  dgetrf-omp-perf.c  dgetrf-perf.c  dgetrs-perf.c  dlaswp-perf.c  dscal-perf.c  dtrsm-perf.c  pdgetrf-perf.c
